--- a/240909_代谢数据库拓展.md
+++ b/240909_代谢数据库拓展.md
@@ -677,4 +677,4 @@ with pd.ExcelWriter(output_table_path) as writer:
         pd.DataFrame(list(genes), columns=[section]).to_excel(writer, sheet_name=section, index=False)
 ```
 
-![venn_diagram](D:\2-DESKTOP\生信分析\4_Phd_analysing\240906_猪代谢相关基因注释\venn_diagram.png)
+![venn_diagram](https://github.com/user-attachments/assets/86127a5f-e43b-4292-833c-00f1ebced83f)
